landingPage.css
/* TC-Demo System Landing Page Styles */
@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

@media (min-width: 769px) {
  .sidr-class-dropdown-menu.sidr-class-pull-left {
    background-color: #0757A8;
    position: absolute;
    height: fit-content !important;
  }
  .sidr-class-dropdown-menu.sidr-class-pull-left > li > a:hover {
    background-color: #05407b;
    transition: all 0.3s ease;
  }
  .sidr-class-dropdown-menu.sidr-class-pull-left > li > a {
    color: white !important;
    line-height: 200%;
    white-space: nowrap;
    padding-left: 16px;
    font-size: 21px;
    font-weight: 400;
  }
  ul#sidr-id-tc-nav-menu-list {
    margin-top: 16px;
    display: flex !important;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    padding-top: 5px;
  }
  div#tc-nav-menu-container {
    position: absolute !important;
    width: 100%;
    height: fit-content;
    overflow: visible !important;
    top: 80px !important;
    display: block;
    left: 0;
  }
  .sidr ul li:hover {
    line-height: 100%;
  }
  .sidr ul li {
    border-top: none !important;
    line-height: 100%;
    padding: 5px 0px;
    text-align: center;
  }
  nav#sidr-id-tc-nav-menu-nav {
    display: flex;
    height: fit-content !important;
    justify-content: center;
  }
  .sidr-inner {
    padding-bottom: 0px !important;
  }
  .simplebar-content-wrapper,
  .simplebar-offset,
  .simplebar-wrapper,
  .sidr-inner,
  .simplebar-mask {
    overflow: visible !important;
  }
  #sidr-id-tc-nav-menu-list li a:has(+ ul):after {
    display: none;
  }
  #sidr-id-tc-nav-menu-list > li > a {
    padding-top: 8px;
    font-size: 21px;
    padding-bottom: 8px;
    display: flex;
    align-items: center;
    font-weight: 500;
    text-transform: capitalize;
  }
  #sidr-id-tc-nav-menu-list > li:hover {
    background-color: #0757A8 !important;
    z-index: 1;
  }
  #sidr-id-tc-nav-menu-list > li:hover > a {
    color: white !important;
    transition: color 0.15s ease-in;
  }
  #sidr-id-tc-nav-menu-list > li:hover > ul {
    display: block !important;
  }
  .simplebar-track {
    display:none !important;
  }
  #tc-hero-image {
    margin-top: 120px;
  }
  .admin-submenu{
    position:absolute;
    left:100%;
    top:0;
    z-index: 10000;
    display:none;
    overflow: visible !important;
  }
  .has-submenu{
    display:none;
  }
  #tc-nav-menu {
    display:none !important;
}
#ChooseTopicsBanner{
  margin-top: 130px !important;
}
}

/* --- Responsive Adjustments --- */
@media (max-width: 768px) {
  div#tc-nav-menu-container {
    margin-top: 50px;
    position: absolute !important;
  }
}

@media (max-width: 480px){
  #tc-nav-menu-container{
    margin-top:30px !important;
  }
}

@media (max-width: 675px) {
  .footer-logo {
    justify-content: center;
  }
}

@media (min-width: 1400px){
    .footer-main{
        justify-content:center;
        gap: 100px;
    }
}

/* --- Footer Styles --- */
.footer-custom {
    position:relative;
    height: 200px;
    display:flex;
    flex-direction: column;
    background: #fff;
    padding-top: 20px;
    z-index: 1048;
}

.footer-main {
  display: flex;
  padding-bottom: 25px;
  justify-content: space-evenly;
  flex-wrap: wrap;
  background: white;
  padding-top: 20px;
  gap: 20px;
}

.footer-logo{
  padding: 0 20px;

}

.footer-logo-nav {
  display: flex;
  flex-wrap: wrap;
  column-gap: 60px;
  row-gap: 20px;
  justify-content: center;
  padding: 0 20px;
}

.footer-logo-img {
  width: 100%;
  height: inherit;
  max-height: 90px;
}

.footer-nav {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  gap: 4px;
  font-weight: 400;
}

.footer-nav li{
  padding: 0.15rem 0;
}

.footer-nav li a {
  color: #000000 !important;
  transition: color 0.2s;
}

.footer-nav li a:hover {
  color: #0757A8 !important;
}

.footer-account-social {
  display: flex;
  align-items: flex-start;
  flex-wrap: wrap;
  justify-content: space-evenly;
  padding: 0 20px;
  gap: 50px;
}

.footer-account {
  display: flex;
  margin-left: 15px;
  min-width: 180px;
  flex-direction: column;
  gap: 10px;
  font-weight: 600;
}

.footer-account-link {
  color: black !important;
  transition: color 0.2s;
}

.footer-account-link:hover {
  color: #0757A8 !important;
  text-decoration: none;
}

.footer-account-icon {
  display: inline-block;
  width: 20px;
  height: 20px;
  background-repeat: no-repeat;
  background-size: contain;
  margin-right: 8px;
  vertical-align: middle;
}

.logout-icon {
  background-image: url('https://public.openwatercdn.com/778725b5-7954-45f8-bc5d-2cedcea7d6ab/43d900de-b961-4001-a63d-981e952c6dd5.svg');
}

.account-icon {
  background-image: url('https://public.openwatercdn.com/778725b5-7954-45f8-bc5d-2cedcea7d6ab/915abb06-1e24-45aa-a64e-af817d006341.svg');
}

.footer-social {
  display: flex;
  align-items: center;
  gap: 10px;
  flex-wrap: wrap;
}

.footer-social a {
  background-image: url(https://public.openwatercdn.com/778725b5-7954-45f8-bc5d-2cedcea7d6ab/a439d2e1-5c64-4824-9413-b13b79cb4ed7.svg) !important;
  background-size: cover !important;
  height: 40px;
  width: 42px;
}

.footer-social a:hover {
  background-image: url(https://public.openwatercdn.com/778725b5-7954-45f8-bc5d-2cedcea7d6ab/153450a6-14d2-49f3-83e9-a625b3c279d0.svg) !important;
  transition: all 0.15s ease;
}

.footer-bottom {
  border-top: 1px solid #e0e0e0;
  padding-top: 20px;
  display: flex;
  gap: 18px;
  flex-wrap: wrap;
  justify-content: center;
  background: white;
}

.footer-bottom-link {
  color: #0757A8 !important;
  margin-left: 16px;
  transition: color 0.2s, text-decoration 0.2s;
}

a.footer-bottom-link:hover {
    color: #0d6efd !important;
}

/* --- Header Logo --- */
#tc-header-logo-user {
  min-width: 120px;
  height: 90px !important;
}

#tc-header-logo-user a.TCLogo {
  background: url(https://public.openwatercdn.com/778725b5-7954-45f8-bc5d-2cedcea7d6ab/7825847b-889f-4894-a73a-8dea0e60680a.png) no-repeat center center;
  background-size: contain;
  width: 100%;
  aspect-ratio: 35/9;
  height: inherit !important;
}

/* --- Header User --- */
#tc-header-user {
  height: 90px !important;
  align-items: center;
  position: relative;
}

#tc-header-user-name {
  margin: 0px 20px 0px 0px !important;
}

#tc-header-user-container-fluid {
  justify-content: flex-end;
}

/* --- Font Style & Size, Miscellaneous --- */
body, a, span, div{
  font-family: 'Roboto', sans-serif;
  font-size: 18px;
}

.tc-login-profile-icon-text{
  font-size:inherit;
}

.TCUserProfileOverlay,
a,
span {
  font-family: 'Roboto', sans-serif;
}

nav a:focus {
  outline: none;
}

.tc-banner-aside:hover {
  background: #395b12;
  color: white !important;
  transition: all 0.4s ease-in-out;
}

/* --- Adjustments for other pages --- */
#tc-main-shortcuts, #tc-main-container-row-fluid{
    top: 150px;
}
#tc-main-shortcuts{
  padding-top: 90px;
  position: absolute;
}
@media (min-width: 867px){
  #tc-main-shortcuts, #tc-main-container-row-fluid{
    top: 115px;
}
#tc-main-shortcuts{
  padding-top: 90px;
  position: absolute;
}
}

#tc-main-container{
  display:flex;
  flex-direction:column;
  gap: 60px;
}

@media(max-width: 767px){
  #tc-main-container{
    gap:150px;
  }
}

